[gd_scene load_steps=28 format=3 uid="uid://cjrv3kmqym4e1"]

[ext_resource type="Script" uid="uid://bxm3brlgnve21" path="res://StartingOffice/scenechange.gd" id="1_n4a1j"]
[ext_resource type="Texture2D" uid="uid://3dybopp2edp5" path="res://StartingOffice/Map v2 large.png" id="2_ek0q2"]
[ext_resource type="Texture2D" uid="uid://n21mywrvi7ij" path="res://UI/Assets/Interactions/Back orange normal.png" id="3_5gnlj"]
[ext_resource type="Texture2D" uid="uid://dxfrr333thc3t" path="res://UI/Assets/Interactions/Back orange hovered.png" id="4_rhcr0"]
[ext_resource type="Texture2D" uid="uid://q2c5aislv1l7" path="res://UI/Assets/Map/Map_pins_normal_anim.tres" id="5_rhcr0"]
[ext_resource type="Texture2D" uid="uid://cnxf12dgpkb" path="res://UI/Assets/Map/Map_pins_pressed_anim.tres" id="6_xb0rx"]
[ext_resource type="Texture2D" uid="uid://cxkkmtm38716w" path="res://UI/Assets/Map/Map_pins_hover_anim.tres" id="7_uw31m"]
[ext_resource type="Texture2D" uid="uid://pexhy6kd641v" path="res://UI/Assets/Map/Pin Pressed4.png" id="8_xb0rx"]
[ext_resource type="Texture2D" uid="uid://ds300a5umjsvk" path="res://UI/Assets/Map/Office Pin Normal1.png" id="9_sdbcn"]
[ext_resource type="Texture2D" uid="uid://cgrmtnp28lslk" path="res://UI/Assets/Map/Office Pin Normal2.png" id="10_xv8mf"]
[ext_resource type="Texture2D" uid="uid://8r8yqv8myru1" path="res://UI/Assets/Map/Office Pin Normal3.png" id="11_0mii4"]
[ext_resource type="Texture2D" uid="uid://c3spdevp4nxl6" path="res://UI/Assets/Map/Office Pin Normal4.png" id="12_6dn5u"]
[ext_resource type="Texture2D" uid="uid://bdp27etud5wnj" path="res://UI/Assets/Map/Office Pin Pressed1.png" id="13_1pcwa"]
[ext_resource type="Texture2D" uid="uid://b57jyl5bi4m8k" path="res://UI/Assets/Map/Office Pin Pressed4.png" id="13_2byc5"]
[ext_resource type="Texture2D" uid="uid://c4n14s7bqn3pj" path="res://UI/Assets/Map/Office Pin Pressed2.png" id="14_tdlr5"]
[ext_resource type="Texture2D" uid="uid://cqlks0vpj6ygi" path="res://UI/Assets/Map/Office Pin Pressed3.png" id="15_qs08e"]
[ext_resource type="Texture2D" uid="uid://ypcxearxke4a" path="res://UI/Assets/Map/Office Pin Hovered1.png" id="17_poonr"]
[ext_resource type="Texture2D" uid="uid://bxpueclt77ud8" path="res://UI/Assets/Map/Office Pin Hovered2.png" id="18_cctyf"]
[ext_resource type="Texture2D" uid="uid://bkvt3v0npsc6k" path="res://UI/Assets/Map/Office Pin Hovered3.png" id="19_sw58j"]
[ext_resource type="Texture2D" uid="uid://blgdcrq1b3ecx" path="res://UI/Assets/Map/Office Pin Hovered4.png" id="20_7ob01"]

[sub_resource type="CanvasTexture" id="CanvasTexture_1pcwa"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ek0q2"]

[sub_resource type="InputEventKey" id="InputEventKey_xb0rx"]
device = -1
keycode = 81
unicode = 113

[sub_resource type="Shortcut" id="Shortcut_uw31m"]
events = [SubResource("InputEventKey_xb0rx")]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_b0e11"]
frames = 4
frame_0/texture = ExtResource("9_sdbcn")
frame_0/duration = 0.25
frame_1/texture = ExtResource("10_xv8mf")
frame_1/duration = 0.25
frame_2/texture = ExtResource("11_0mii4")
frame_2/duration = 0.25
frame_3/texture = ExtResource("12_6dn5u")
frame_3/duration = 0.25

[sub_resource type="AnimatedTexture" id="AnimatedTexture_c2wqj"]
frames = 4
one_shot = true
frame_0/texture = ExtResource("13_1pcwa")
frame_0/duration = 0.25
frame_1/texture = ExtResource("14_tdlr5")
frame_1/duration = 0.25
frame_2/texture = ExtResource("15_qs08e")
frame_2/duration = 0.25
frame_3/texture = ExtResource("13_2byc5")
frame_3/duration = 0.25

[sub_resource type="AnimatedTexture" id="AnimatedTexture_eaghe"]
frames = 4
frame_0/texture = ExtResource("17_poonr")
frame_0/duration = 0.25
frame_1/texture = ExtResource("18_cctyf")
frame_1/duration = 0.25
frame_2/texture = ExtResource("19_sw58j")
frame_2/duration = 0.25
frame_3/texture = ExtResource("20_7ob01")
frame_3/duration = 0.25

[node name="Map" type="CanvasLayer"]
script = ExtResource("1_n4a1j")

[node name="Background2" type="TextureRect" parent="."]
modulate = Color(0.32549, 0.227451, 0.184314, 0.458824)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_1pcwa")

[node name="Background" type="TextureRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.0980392)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_ek0q2")

[node name="Map" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 322.5
offset_top = -310.0
offset_right = -322.5
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(637.5, 850)
texture = ExtResource("2_ek0q2")

[node name="Exit" type="TextureButton" parent="."]
offset_left = 50.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 130.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_uw31m")
shortcut_in_tooltip = false
texture_normal = ExtResource("3_5gnlj")
texture_pressed = ExtResource("4_rhcr0")
texture_hover = ExtResource("4_rhcr0")

[node name="Micah" type="TextureButton" parent="."]
offset_left = 995.0
offset_top = 870.0
offset_right = 1025.0
offset_bottom = 985.0
scale = Vector2(0.6, 0.6)
mouse_default_cursor_shape = 2
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource("5_rhcr0")
texture_pressed = ExtResource("6_xb0rx")
texture_hover = ExtResource("7_uw31m")
texture_disabled = ExtResource("8_xb0rx")

[node name="Juniper" type="TextureButton" parent="."]
offset_left = 641.0
offset_top = 546.0
offset_right = 741.0
offset_bottom = 661.0
scale = Vector2(0.6, 0.6)
mouse_default_cursor_shape = 2
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource("5_rhcr0")
texture_pressed = ExtResource("6_xb0rx")
texture_hover = ExtResource("7_uw31m")
texture_disabled = ExtResource("8_xb0rx")

[node name="Quincy" type="TextureButton" parent="."]
offset_left = 1190.0
offset_top = 48.0
offset_right = 1224.0
offset_bottom = 163.0
scale = Vector2(0.6, 0.6)
mouse_default_cursor_shape = 2
toggle_mode = true
keep_pressed_outside = true
shortcut_in_tooltip = false
texture_normal = ExtResource("5_rhcr0")
texture_pressed = ExtResource("6_xb0rx")
texture_hover = ExtResource("7_uw31m")
texture_disabled = ExtResource("8_xb0rx")

[node name="Office" type="TextureButton" parent="."]
offset_left = 860.0
offset_top = 498.0
offset_right = 960.0
offset_bottom = 613.0
scale = Vector2(0.6, 0.6)
mouse_default_cursor_shape = 2
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = SubResource("AnimatedTexture_b0e11")
texture_pressed = SubResource("AnimatedTexture_c2wqj")
texture_hover = SubResource("AnimatedTexture_eaghe")
texture_disabled = ExtResource("13_2byc5")

[node name="Secret" type="TextureButton" parent="."]
offset_left = 641.0
offset_top = 63.0
offset_right = 741.0
offset_bottom = 178.0
scale = Vector2(0.6, 0.6)
mouse_default_cursor_shape = 2
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource("5_rhcr0")
texture_pressed = ExtResource("6_xb0rx")
texture_hover = ExtResource("7_uw31m")
texture_disabled = ExtResource("8_xb0rx")

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Micah" to="." method="_on_firsthouse_button_pressed"]
[connection signal="pressed" from="Juniper" to="." method="_on_secondhouse_button_pressed"]
[connection signal="pressed" from="Quincy" to="." method="_on_thirdhouse_button_pressed"]
[connection signal="pressed" from="Office" to="." method="_on_office_button_pressed"]
[connection signal="pressed" from="Secret" to="." method="_on_secret_button_pressed"]
